Cleaned up home splash page css

--- a/static_in_env/css/global.css
+++ b/static_in_env/css/global.css
@@ -33,6 +33,11 @@
     color: white;
 }
 
+.btn-blue-outline {
+    background-color: #1A1B41;
+    color: white;
+}
+
 .btn-blue:hover {
     background-color: white;
     color: #1A1B41;
@@ -68,7 +73,7 @@
 
 body {
     font-family: 'Lato', sans-serif;
-    padding-top: 65px;
+    padding-top: 60px;
 }
 
 a:hover {
@@ -109,11 +114,21 @@ a.nav-link {
 }
 
 .nav-link.active {
-    background-color: #19A404 !important;
+    border-bottom-color: #19A404 !important;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    background-color: none;
 }
 
 .nav-league {
     background-color: #33A1FD;
+    border-radius: 5px;
+}
+
+.nav-account {
+    border-style: solid;
+    border-width: 1px;
+    border-color: white;
     border-radius: 5px;
 }
 
