--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -4,13 +4,14 @@
     <title>Home</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet"> {% load static %}
     <link href="{% static 'css/global.css' %}" rel="stylesheet">
+    <link href="{% static 'home/home.css' %}" rel="stylesheet">
 </head>
 
 <body>
     <div class="container-fluid">
         <nav class="navbar navbar-light navbar-expand fixed-top bg-white">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="{% static 'media/logoSmallBlack.png' %}" width="50" /></a>
+                <a class="navbar-brand"><img src="{% static 'media/logoSmallBlack.png' %}" width="50" /></a>
                 <div><a class="btn mr-2 btn-green-outline" href="/login/">Login</a>
                     <a class="btn mr-1 btn-green" href="/account/create/">Join</a></div>
             </div>
@@ -18,23 +19,23 @@
         <div class="row">
             <div class="col text-center" style="background-image: url('static/media/mahomes.png');background-repeat: no-repeat;background-size: cover;padding: 0px;padding-bottom: 150px;background-position: top;">
                 <img class="img-fluid d-block m-auto title" src="{% static 'media/logoTitleWhite.png' %}" style="width: 505px;padding-top: 200px;max-height: 100%;" />
-                <h4 class="" style="color: #ffffff;">A new way to play.</h4>
+                <h4 class="text-white">A new way to play.</h4>
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6 d-flex flex-column align-items-center" style="background-color: #33a1fd;padding-top: 30px;padding-bottom: 30px;">
-                <h1 class="text-center" style="color: rgb(255,255,255);font-size: 45px;">Make Picks</h1>
-                <h4 class="text-center" style="color: #ffffff;font-size: 20px;margin-bottom: 15px;">Select who you think will win each game throughout the season and earn points by selecting the winner.</h4>
+            <div class="col-lg-6 d-flex flex-column align-items-center display-box" style="background-color: #33a1fd;">
+                <h1 class="text-center display-box-header display-4"><strong>Make Picks</strong></h1>
+                <h4 class="text-center display-box-description">Select who you think will win each game throughout the season and earn points by selecting the winner.</h4>
             </div>
-            <div class="col-lg-6 d-flex flex-column align-items-center" style="background-color: #3066be;padding-top: 30px;padding-bottom: 30px;">
-                <h1 class="text-center" style="color: rgb(255,255,255);font-size: 45px;">Make Bets</h1>
-                <h4 class="text-center" style="color: #ffffff;font-size: 20px;margin-bottom: 15px;">Use the points you earn from correct picks to bet on the spread of any game to earn even more points!</h4>
+            <div class="col-lg-6 d-flex flex-column align-items-center display-box" style="background-color: #3066be;">
+                <h1 class="text-center display-box-header display-4">Place Bets</h1>
+                <h4 class="text-center display-box-description">Use the points you earn from correct picks to bet on the spread of any game to earn even more points!</h4>
             </div>
         </div>
         <div class="row">
-            <div class="col d-flex flex-column align-items-center" style="background-color: #1b2a41;padding-top: 30px;padding-bottom: 30px;">
-                <h1 class="text-center text-white" style="color: rgb(255,255,255);font-size: 45px;">Compete in Leagues</h1>
-                <h4 class="text-center" style="color: #ffffff;font-size: 20px;margin-bottom: 15px;">Manage your own private league with friends or join a public league and see if you have what it takes to win the season.</h4>
+            <div class="col d-flex flex-column align-items-center display-box" style="background-color: #1b2a41;">
+                <h1 class="text-center display-box-header display-4">Compete in Leagues</h1>
+                <h4 class="text-center display-box-description">Manage your own private league with friends or join a public league and see if you have what it takes to win the season.</h4>
             </div>
         </div>
     </div>
