--- a/home/static/home/dashboard.css
+++ b/home/static/home/dashboard.css
@@ -1,6 +1,11 @@
 .no-padding {
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.navbar-dashboard {
+    margin-top: 60px;
+    z-index: 1;
 }
 
 .game-row {
@@ -9,6 +14,80 @@
     border-bottom-width: 1px;
 }
 
-.tab-button {
-    width: 150px;
+.dashboard-menu-item {
+    background-color: white;
+    border-radius: 0 !important;
+}
+
+.dashboard-menu-item:hover {
+    border-bottom: 5px solid #33A1FD;
+    transition: .1s;
+}
+
+.dashboard-menu-item.active {
+    border-bottom: 5px solid #33A1FD;
+}
+
+a.dashboard-menu-item {
+    color: black !important;
+}
+
+
+/*League Page Style*/
+
+.league-dashboard {
+    height: 700px;
+    margin-right: 10;
+    margin-left: 10;
+}
+
+.double-nav-margin {
+    margin-top: 70px;
+}
+
+.tabs {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.notification-board {
+    background-color: #212529;
+    border-radius: 10px;
+}
+
+.notification-box {
+    background-color: #33A1FD;
+}
+
+.message-board {
+    background-color: white;
+    height: 100%;
+    overflow-y: scroll;
+}
+
+.leader-board {
+    background-color: #212529;
+}
+
+.leaderboard-table {
+    border-top: none;
+}
+
+a.league-menu-item.active {
+    background-color: #33A1FD;
+    color: white !important;
+}
+
+a.league-menu-item {
+    background-color: white;
+    color: black !important;
+    transition: .3s;
+    border: 1px #212529 solid;
+    padding:
+}
+
+a.league-menu-item:hover {
+    background-color: #33A1FD;
+    color: white !important;
+    transition: .3s;
 }
