--- a/fantasyFootball/templates/fantasyFootball/base.html
+++ b/fantasyFootball/templates/fantasyFootball/base.html
@@ -1,6 +1,6 @@
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>Onside Pick</title>
     <!-- Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
@@ -16,33 +16,33 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div id="navbarNavDropdown" class="navbar-collapse collapse">
-        <ul class="navbar-nav nav-pills mr-auto">
+        <ul class="navbar-nav mr-auto">
             <li class="nav-item main-menu mr-1">
                 {% if page == 'dashboard' %}
-                <a class="nav-link active" href="/home/">Dashboard</a> {% else %}
+                <a class="nav-link active-menu-item" href="/home/">Dashboard</a> {% else %}
                 <a class="nav-link" href="/home/">Dashboard</a> {% endif %}
             </li>
             <li class="nav-item main-menu mr-1">
                 {% if page == 'picks' %}
-                <a class="nav-link active" href="/picks/">Picks</a> {% else %}
+                <a class="nav-link active-menu-item" href="/picks/">Picks</a> {% else %}
                 <a class="nav-link" href="/picks/">Picks</a> {% endif %}
             </li>
             <li class="nav-item main-menu">
                 {% if page == 'bets' %}
-                <a class="nav-link active" href="/bets/">Bets</a> {% else %}
+                <a class="nav-link active-menu-item" href="/bets/">Bets</a> {% else %}
                 <a class="nav-link" href="/bets/">Bets</a> {% endif %}
             </li>
         </ul>
         <ul class="navbar-nav">
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown mr-2">
                 {% if activeLeague %}
                 <a class="dropdown-toggle nav-link nav-league" data-toggle="dropdown" aria-expanded="false" href="#">
                     <img class="mr-2" src="{% static 'media/leagueIcon.png' %}" width="auto" height="25" />
-                    <span>{{ activeLeague }}</span>
+                    <span id="leagueName" name="{{ activeLeague }}" value="{{ activeLeague }}"><strong>{{ activeLeague }}</strong></span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     {% for league in userLeagues %}
-                    <a id="leagueName" name="{{ league.name }}" class="dropdown-item dropdown-league" href="/home/1/{{ league.name }}/">{{ league.name }}</a> {% endfor %}
+                    <a name="{{ league.name }}" class="dropdown-item dropdown-league" href="/home/1/{{ league.name }}/">{{ league.name }}</a> {% endfor %}
                     <div class="dropdown-divider"></div>
                     <a href="/league/join/" class="dropdown-item dropdown-league">Join League</a>
                     <a href="/league/create/" class="dropdown-item dropdown-league">Create League</a>
@@ -53,7 +53,7 @@
             <li class="nav-item dropdown">
                 <a class="dropdown-toggle nav-link nav-account" data-toggle="dropdown" aria-expanded="false" href="#">
                     <img class="mr-2" src="{% static 'media/avatarWhite.png' %}" width="25" height="auto" />
-                    <span class="username-nav">Welcome, {{ user.username }}</span>
+                    <span class="username-nav">Account</span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item dropdown-account" href="/account/">My Account</a>
