--- a/picks/templates/picks/picks.html
+++ b/picks/templates/picks/picks.html
@@ -4,7 +4,7 @@
 <body>
     <div class="container">
         <!--Week and League List Selectors-->
-        <div class="d-flex flex-row justify-content-between mb-2">
+        <div class="d-flex flex-row justify-content-between mb-2 mt-2">
             <div class="dropdown">
                 <button class="btn btn-green btn-sm dropdown-toggle" id="weekId" name="{{ week }}" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Week {{ week }}
