--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -21,13 +21,13 @@
                         <!-- League Navigation -->
                         <ul class="nav nav-fill w-100" id="myTab" role="tablist">
                             <li class="nav-item">
-                                <a class="nav-link active league-menu-item border-right-0" id="leaderboard-tab" data-toggle="tab" href="#leaderboard" role="tab" aria-controls="leaderboard" aria-selected="true">Leaderboard</a>
+                                <a class="nav-link active league-menu-item league-menu-item-left border-right-0" id="leaderboard-tab" data-toggle="tab" href="#leaderboard" role="tab" aria-controls="leaderboard" aria-selected="true">Leaderboard</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link league-menu-item" id="messageboard-tab" data-toggle="tab" href="#messageboard" role="tab" aria-controls="messageboard" aria-selected="false">Message Board</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link league-menu-item border-left-0" id="leaguesettings-tab" data-toggle="tab" href="#leaguesettings" role="tab" aria-controls="leaguesettings" aria-selected="false">Settings</a>
+                                <a class="nav-link league-menu-item league-menu-item-right border-left-0" id="leaguesettings-tab" data-toggle="tab" href="#leaguesettings" role="tab" aria-controls="leaguesettings" aria-selected="false">Settings</a>
                             </li>
                         </ul>
                         <!-- League Nav Content -->
