--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -13,7 +13,10 @@
                 </div>
             </nav>
         </div>
-        <div class="tab-content double-nav-margin" id="nav-tabContent">
+        <div class="row double-nav-margin justify-content-center">
+            <h1><strong>{{ activeLeague }}</strong></h1>
+        </div>
+        <div class="tab-content" id="nav-tabContent">
             <!-- League tab -->
             <div class="tab-pane fade rounded show active" id="nav-league" role="tabpanel" aria-labelledby="nav-league-tab">
                 <div class="row league-dashboard">
